remove whitespace when parsing XML